tests/ui/string_bad_allowed_values.rs
use identifiers::StringIdentifier;

#[derive(StringIdentifier)]
#[allowed_values(typo)]
struct BadId(String);

fn main() {}
